# riff-daw

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
ardour/: ardour_import_freedom_daw_project.lua
clap_checker/: Cargo.toml
clap_checker/src/: main.rs
reaper/: reaper_export_to_freedom_daw.lua  reaper_import_freedom_daw_project.lua
riff-daw/: .gitignore  Cargo.toml  build.rs
riff-daw/include/: vst3cxxbridge.h  vst3headers.h
riff-daw/src/: audio.rs  audio_plugin_util.rs  constants.rs  daw.glade  daw_style.css  domain.rs  event.rs  freedom_daw_4.glade  freedom_daw_4_style.css  grid.rs  history.rs  lua_api.rs  main.rs  mixer_blade.glade  riff_arrangement_blade.glade  riff_arrangement_riff_set_blade.glade  riff_grid_blade.glade  riff_sequence_blade.glade  riff_set_blade.glade  riff_set_blade_head.glade  state.rs  test.fdaw  track_audio_routing_dialogue.glade  track_audio_routing_panel.glade  track_details_dialogue.glade  track_midi_routing_dialogue.glade  track_midi_routing_panel.glade  track_panel.glade  ui.rs  utils.rs  vst3_cxx_bridge.rs  vst3cxxbridge.cc
riff-daw/test_data/: test.fdaw
vst3_checker/: Cargo.toml  build.rs
vst3_checker/include/: vst3headers.h  vst3pluginchecker.h
vst3_checker/src/: main.rs  vst3pluginchecker.cc
vst_checker/: Cargo.toml
vst_checker/src/: main.rs  vst.rs
